<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.dili</groupId>
    <artifactId>mtms</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <description>mtms</description>
    <packaging>jar</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>13</java.version>
        <!--  MyBatis Generator  -->
        <!--  Java接口和实体类  -->
        <targetJavaProject>${basedir}/src/main/java</targetJavaProject>
        <targetMapperPackage>com.dili.mtms.mapper</targetMapperPackage>
        <targetModelPackage>com.dili.mtms.domain</targetModelPackage>
        <targetServicePackage>com.dili.mtms.service</targetServicePackage>
        <targetControllerPackage>com.dili.mtms.controller</targetControllerPackage>
        <templateRootDir>${basedir}/mbg-templates</templateRootDir>
        <!--  XML生成路径  -->
        <targetResourcesProject>${basedir}/src/main/resources</targetResourcesProject>
        <targetXMLPackage>mapper</targetXMLPackage>
    </properties>

    <!-- 父工程定义 -->
    <parent>
        <artifactId>mtms-parent</artifactId>
        <groupId>com.dili</groupId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>

    <build>
        <finalName>mtms</finalName>
        <!-- 资源文件过滤 -->
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <!-- 编译JDK版本 -->
                <configuration>
                    <source>13</source>
                    <target>13</target>
                    <encoding>UTF-8</encoding>
                    <parameters>true</parameters>
                    <compilerArgs>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>2.3.9.RELEASE</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <nonFilteredFileExtensions>
                        <nonFilteredFileExtension>xls</nonFilteredFileExtension>
                        <nonFilteredFileExtension>xlsx</nonFilteredFileExtension>
                    </nonFilteredFileExtensions>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-json</artifactId>
            <version>2.5.0</version>
        </dependency>

        <dependency>
            <groupId>com.dili</groupId>
            <artifactId>uid-sdk</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>

        <!-- spring boot 基类  -->
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>ss-mvc</artifactId>
			<version>${sharp-sword.version}</version>
		</dependency>
        <dependency>
            <groupId>com.dili</groupId>
            <artifactId>ss-processor</artifactId>
            <version>${sharp-sword.version}</version>
        </dependency>
        <!-- if you enable json support in spring mvc. -->
        <dependency>
            <groupId>org.codehaus.jackson</groupId>
            <artifactId>jackson-mapper-asl</artifactId>
            <version>1.9.13</version>
        </dependency>

        <!-- ===============  spring cloud starters  =============== -->

        <dependency>
            <groupId>com.alibaba.cloud</groupId>
            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
            <version>2.2.5.RELEASE</version>
            <exclusions>
                <exclusion>
                    <groupId>com.alibaba</groupId>
                    <artifactId>fastjson</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.alibaba.cloud</groupId>
            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
            <version>2.2.5.RELEASE</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-openfeign</artifactId>
            <version>2.2.5.RELEASE</version>
        </dependency>

        <!-- 内部包  -->
<!--        <dependency>-->
<!--            <groupId>com.dili</groupId>-->
<!--            <artifactId>mtms-sdk</artifactId>-->
<!--            <version>1.0.0-SNAPSHOT</version>-->
<!--        </dependency>-->
        <dependency>
            <groupId>com.dili</groupId>
            <artifactId>commons-web</artifactId>
            <version>1.3.5-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.dili</groupId>
            <artifactId>uap-sdk</artifactId>
            <version>3.2.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>

    </dependencies>



</project>